fix view more btn

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Grant and Collin
 Author URI: https://opencollective.com/blankslate#section-contributors
 Description: Donate: https://opencollective.com/blankslate. Learn: https://blankslate.me/. BlankSlate is the definitive WordPress boilerplate starter theme. I've carefully constructed the most clean and minimalist theme possible for designers and developers to use as a base to build websites for clients or to build completely custom themes from scratch. Clean, simple, unstyled, semi-minified, unformatted, and valid code, SEO-friendly, jQuery-enabled, no programmer comments, standardized and as white label as possible, and most importantly, the CSS is reset for cross-browser-compatability, with no intrusive visual CSS styles added whatsoever. A perfect skeleton theme. For support and suggestions, go to: https://github.com/bhadaway/blankslate/issues. Thank you.
 Tags: accessibility-ready, one-column, two-columns, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready
-Version: 2024.1.358
+Version: 2024.1.359
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -205,6 +205,25 @@ input[type="checkbox"]:checked::before {
 
 .icon-btn.disable-item-btn:hover {
   color: var(--red);
+}
+
+.icon-btn.enable-item-btn:hover {
+  color: var(--green);
+}
+
+.btn.view-more-btn {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.btn.view-more-btn i {
+  font-size: 1rem;
+  transition: transform 0.2s ease-out;
+}
+
+.btn.view-more-btn:hover i {
+  transform: translateX(2px);
 }
 
 /* Universal page layout */
@@ -497,23 +516,19 @@ input[type="checkbox"]:checked::before {
   gap: 16px;
 }
 
-/* Modal Form (Add/Edit) */
-
-/* .form__inputs-container, */
+/* Forms */
 .form-items-list {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
 
-/* .form__input-item, */
 .form-item {
   display: flex;
   flex-direction: column;
   gap: 2px;
 }
 
-/* .form__input-item label, */
 .form-label {
   font-family: var(--sweet-sans);
   color: var(--txt-color-medium);
@@ -522,15 +537,13 @@ input[type="checkbox"]:checked::before {
   font-weight: 600;
 }
 
-/* .form__input-item label span, */
 .form-label span {
   color: var(--red);
 }
 
-/* .form__input-item input,
-.form__input-item textarea, */
 .form-text-input,
-.form-textarea {
+.form-textarea,
+.form-select {
   font-family: var(--plantin);
   height: 3rem;
   outline: none;
@@ -539,49 +552,44 @@ input[type="checkbox"]:checked::before {
   font-size: 0.9rem;
   background-color: var(--primary-bg-color);
   color: var(--txt-color-dark);
+  padding: 4px 6px;
 }
 
-/* .form__input-item textarea, */
 .form-textarea {
   height: 5rem;
-  padding: 16px 6px;
+  padding: 16px 6px 4px 6px;
   resize: none;
   overflow: auto;
 }
 
-/* .form__input-item input::placeholder,
-.form__input-item textarea::placeholder, */
+.form-select {
+  padding: 4px 2px;
+}
+
 .form-text-input::placeholder,
-.form-textarea::placeholder {
+.form-textarea::placeholder,
+.form-select::placeholder {
   color: var(--txt-color-light);
 }
 
-/* .form__input-item input:focus,
-.form__input-item textarea:focus, */
 .form-text-input:focus,
-.form-textarea:focus {
+.form-textarea:focus,
+.form-select:focus {
   border-color: var(--btn-border-color-hover);
 }
 
-/* .form__input-item input.valid,
-.form__input-item select.valid,
-.form__input-item textarea.valid, */
 .form-text-input.valid,
 .form-textarea.valid,
 .form-select.valid {
   border-color: var(--green);
 }
 
-/* .form__input-item input.invalid,
-.form__input-item select.invalid,
-.form__input-item textarea.invalid, */
 .form-text-input.invalid,
 .form-textarea.invalid,
 .form-select.invalid {
   border-color: var(--red);
 }
 
-/* .form__input-item__validation-msg, */
 .form-validation-msg {
   font-family: var(--sweet-sans);
   font-weight: 600;
@@ -590,12 +598,10 @@ input[type="checkbox"]:checked::before {
   letter-spacing: 0.025rem;
 }
 
-/* .form__input-item__validation-msg.error, */
 .form-validation-msg.error {
   color: var(--red);
 }
 
-/* .form__input-item__validation-msg.success, */
 .form-validation-msg.success {
   color: var(--green);
 }
