--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Grant and Collin
 Author URI: https://opencollective.com/blankslate#section-contributors
 Description: Donate: https://opencollective.com/blankslate. Learn: https://blankslate.me/. BlankSlate is the definitive WordPress boilerplate starter theme. I've carefully constructed the most clean and minimalist theme possible for designers and developers to use as a base to build websites for clients or to build completely custom themes from scratch. Clean, simple, unstyled, semi-minified, unformatted, and valid code, SEO-friendly, jQuery-enabled, no programmer comments, standardized and as white label as possible, and most importantly, the CSS is reset for cross-browser-compatability, with no intrusive visual CSS styles added whatsoever. A perfect skeleton theme. For support and suggestions, go to: https://github.com/bhadaway/blankslate/issues. Thank you.
 Tags: accessibility-ready, one-column, two-columns, custom-menu, featured-images, microformats, sticky-post, threaded-comments, translation-ready
-Version: 2024.1.360
+Version: 2024.1.361
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -36,6 +36,8 @@ BlankSlate is distributed under the terms of the GNU GPL
   --green: rgb(87, 171, 130);
   --green-light: rgba(87, 171, 130, 0.04);
   --green-dark: rgb(60, 119, 91);
+  --yellow: rgb(243, 213, 78);
+  --yellow-light: rgba(243, 213, 78, 0.04);
   /* Buttons */
   --btn-border-color: rgba(0, 0, 0, 0.23);
   --btn-bg-color: rgb(251, 246, 242);
