--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Redirect Manager
 Author: Grant Collins and Collin Blank
 Description: A custom theme built for the Classical Conversations Redirect Manager.
-Version: 2024.1.364
+Version: 2024.1.365
 Requires at least: 5.2
 Tested up to: 6.5
 Requires PHP: 7.0
@@ -290,7 +290,7 @@ input[type="checkbox"]:checked::before {
 }
 
 /* Home page */
-#home-page {
+/* #home-page {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -304,7 +304,6 @@ input[type="checkbox"]:checked::before {
   gap: 8px;
 }
 
-/* Probably just style as default btns */
 #home-page .menu-item {
   transition: 0.1s ease-out;
   background-color: var(--btn-bg-color);
@@ -326,7 +325,7 @@ input[type="checkbox"]:checked::before {
   font-weight: 500;
   letter-spacing: 0.025rem;
   color: var(--btn-txt-color);
-}
+} */
 
 /* PAGE NOTICE BANNER */
 .notice-banner {
@@ -334,7 +333,6 @@ input[type="checkbox"]:checked::before {
   justify-content: space-between;
   align-items: center;
   gap: 24px;
-  /* border: 1px solid; */
   border-radius: 4px;
   padding: 12px 8px;
   margin-bottom: 8px;
@@ -464,7 +462,7 @@ input[type="checkbox"]:checked::before {
   flex-direction: column;
 }
 
-.disable-item__checkbox {
+.form-checkbox {
   display: flex;
   align-items: center;
   gap: 4px;
